work on generating wordnet tree

--- a/play_with_wordnet.ipynb
+++ b/play_with_wordnet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -16,14 +16,10 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_2620525/2773672390.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data/ImageNet'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'imagenet_class_clean.npy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mimagenet_cls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimagenet_cls\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[Synset('entity.n.01'), Synset('physical_entity.n.01'), Synset('object.n.01'), Synset('whole.n.02'), Synset('living_thing.n.01'), Synset('organism.n.01'), Synset('animal.n.01'), Synset('chordate.n.01'), Synset('vertebrate.n.01'), Synset('aquatic_vertebrate.n.01'), Synset('fish.n.01'), Synset('bony_fish.n.01'), Synset('teleost_fish.n.01'), Synset('soft-finned_fish.n.01'), Synset('cypriniform_fish.n.01'), Synset('cyprinid.n.01'), Synset('tench.n.01')]]\n"
      ]
     }
    ],
@@ -34,16 +30,36 @@
     "nltk.download('wordnet')\n",
     "import numpy as np\n",
     "\n",
+    "all_paths = []\n",
     "with open(os.path.join('data/ImageNet','imagenet_class_clean.npy'), 'rb') as f:\n",
     "    imagenet_cls = np.load(f)\n",
-    "    print(imagenet_cls)\n",
-    "\n"
+    "    for c in imagenet_cls[0:10]:\n",
+    "        word = wn.synsets(c)[0]\n",
+    "        paths = word.hypernym_paths()\n",
+    "        all_paths.append(paths)\n",
+    "        # for i in range(0, 10):\n",
+    "        #     word = word.hypernyms()[0]\n",
+    "        #     print(word.name())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curr = [0 for _ in range(len(all_paths))]\n",
+    "def find_children(node):\n",
+    "    children = set()\n",
+    "    for i, path in enumerate(all_paths):\n",
+    "        children.add(path[curr[i]])\n",
+    "    curr[i] += 1"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "fa56a5a9e2337e14c6ff42e1181e45adba3b312f924b3ad07643226ff4a184bf"
+   "hash": "2840c87e800e1e7e18fa7d085d386a21f85789548a36ee1686fb8bea95d0b70b"
   },
   "kernelspec": {
    "display_name": "Python 3.8.12 64-bit ('env2': conda)",
